# zergoqrf

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml
.github/workflows/: backend.yml  frontend.yml
apps/backend/: .env.example  Dockerfile  README.md  pyproject.toml
apps/backend/app/: main.py  security.py
apps/backend/app/common/: exceptions.py  supabase_client.py
apps/backend/app/core/: config.py  database.py  logging.py  logging_config.py
apps/backend/app/features/admin/: router.py
apps/backend/app/features/admin/presentation/: router.py
apps/backend/app/features/auth/: router.py
apps/backend/app/features/auth/application/: auth_dtos.py
apps/backend/app/features/auth/application/use_cases/: __init__.py  anonymous_session_use_cases.py  email_auth_use_cases.py  phone_auth_use_cases.py  token_management_use_cases.py
apps/backend/app/features/auth/domain/: auth_entities.py  auth_exceptions.py  auth_repos.py  auth_vos.py
apps/backend/app/features/auth/infrastructure/: supabase_auth_repository.py
apps/backend/app/features/auth/presentation/: error_helpers.py  router.py  supabase_auth_router.py  supabase_dependencies.py
apps/backend/app/features/menu/: router.py
apps/backend/app/features/menu/presentation/: router.py
apps/backend/app/features/orders/: router.py
apps/backend/app/features/orders/presentation/: router.py
apps/backend/tests/: test_health.py
apps/frontend/: .env  .flutter-plugins  .flutter-plugins-dependencies  README.md  pubspec.yaml
docs/: architecture.md  prd.md
docs/architecture/: api-specification.md  authentication-and-authorization.md  backend-architecture.md  data-models.md  frontend-architecture.md  index.md  (+3 more)
(+82 files in other folders)
