[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zergo-backend"
version = "0.1.0"
description = "ZERGO QR FastAPI backend"
authors = [{ name = "ZERGO" }]
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.23.0",
  "pydantic[email]>=2.5.0", # Add email extra for EmailStr validation
  "pydantic-settings>=2.1.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.1",
  "structlog>=24.1.0",
  "sentry-sdk[fastapi]>=2.13.0",
  "sqlalchemy[asyncpg]>=2.0.0",
  "asyncpg>=0.29.0",
  "greenlet>=3.0.0", # Required for SQLAlchemy async
  "supabase>=2.6.0",
  "gotrue>=1.0.0", # Explicitly add gotrue
  "PyJWT[crypto]>=2.8.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "pytest-mock>=3.12.0",
  "httpx>=0.27.0",  # For TestClient
  "black>=24.2.0",
  "mypy>=1.9.0",
  "flake8>=7.0.0",
  "isort>=5.13.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
